@@ -115,6 +115,7 @@ AM_CFLAGS_BASE = \
 	@FLAG_W_MISSING_PARAMETER_TYPE@ \
 	@FLAG_W_LOGICAL_OP@ \
 	@FLAG_W_ENUM_CONVERSION@ \
+	@FLAG_W_IMPLICIT_FALLTHROUGH@ \
 	@FLAG_W_OLD_STYLE_DECLARATION@ \
 	@FLAG_FINLINE_FUNCTIONS@ \
 	@FLAG_FNO_STACK_PROTECTOR@ \
