@@ -2040,7 +2040,7 @@ static HReg iselIntExpr_R_wrk ( ISelEnv* env, IRExpr* e )
          addInstr(env, ARM64Instr_MovI(dst, hregARM64_X0()));
          return dst;
       }
-      /* else fall through; will hit the irreducible: label */
+      goto irreducible;
    }
 
    /* --------- LITERAL --------- */
