@@ -911,7 +911,8 @@ void VG_(invoke_gdbserver) ( int check )
          interrupts_non_interruptible++;
          VG_(force_vgdb_poll) ();
          give_control_back_to_vgdb();
-
+         /* If give_control_back_to_vgdb returns in an non interruptable
+	    state something went horribly wrong, fallthrough to vg_assert. */
       default:             vg_assert(0);
       }
    }
